# EML-Boost

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  pytest.ini
eml_boost/: __init__.py  _numerics.py  _triton_exhaustive.py  datasets.py  ensemble.py  metrics.py  selection.py  training.py
eml_boost/symbolic/: master_formula.py  simplify.py  snap.py  verify.py
eml_boost/tree_split/: __init__.py  _gpu_split.py  _gpu_split_triton.py  _leaf_batch.py  _levelwise.py  _multinode_hist.py  _predict_triton.py  _segmented.py  ensemble.py  nodes.py  tree.py
eml_boost/weak_learners/: base.py  (+2 more)
experiments/: bench_sanity.py  calibration.py  current_state.md  run_calibration_benchmark.py  run_experiment10_leaf_ridge.py  run_experiment11_leaf_cap.py  run_experiment12_min_leaf_sweep.py  run_experiment13_apnea1_capacity.py  run_experiment14_capacity_unlocked.py  run_experiment15_full_pmlb.py  run_experiment16_leaf_l2_validation.py  run_experiment17_matched_revalidation.py  run_experiment18_openml_ctr23.py  run_experiment19_levelwise_parity.py  run_experiment2_trace.py  run_experiment4_extrapolation.py  run_experiment6_k2_extrapolation.py  run_experiment7_pmlb.py  run_experiment8_pmlb_split.py  run_experiment9_stacked_blend.py  workflow.md
profile_344mv/: cum.txt  profile.pstats  run_profile.py  tot.txt
profile_loss_regime/: instrument_sleuth_ex1714.py  investigate_xgb_vs_sb_smalln.py  isolate_rabe.py  probe_20seed_losses.py  probe_k_eml.py  probe_min_samples_leaf_eml.py
profile_redux/: cum.txt  cum_step0.txt  profile.pstats  run_profile.py  tot.txt  tot_step0.txt
(+124 files in other folders)
