[project]
name = "new-gbdt-angle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openml>=0.15.1",
    "pmlb>=1.0.1.post3",
    "pysr>=1.5.10",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eml_boost"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
